Clean up tests.
- Simple syntax for array creation.
- Use better Collection APIs.
- Make test fixture a static class.
- Use number cache when possible.